# transformer-kernels

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
benchmarks/: bench_kernels.py  roofline.py
benchmarks/results/: bench_summary.txt  roofline_summary.txt
include/: kernels.h  utils.h
python/transformer_kernels/: __init__.py  inference.py
src/: bindings.cpp  rmsnorm.cpp  rope.cpp  softmax.cpp
tests/: test_kernels.py
